<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/bmigraphic"
            android:id="@+id/mainGraphic"
            app:layout_constraintBottom_toTopOf="@+id/guideline" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.3"/>
    <TextView
            android:text="Height:"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/heightLabel" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/guideline" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/unitSwitch" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/heightInput" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/heightLabel" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" android:hint="170"
            android:inputType="number|numberDecimal"/>
    <TextView
            android:text="Weight:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weightLabel" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/heightInput" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/weightInput" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/weightLabel" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" android:hint="80"
    />
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline2"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.7"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bmiResultLabel"
            app:layout_constraintTop_toTopOf="@+id/guideline2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textStyle="bold" android:textSize="18sp" android:text="BMI Result"
            android:layout_marginTop="64dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bmiResult" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/bmiResultLabel" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="30sp" android:textStyle="bold" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="Calculate BMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calculateButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/weightInput" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/bmiResultLabel" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/unitSwitch"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="@+id/guideline"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:showText="false" android:splitTrack="false" tools:checked="false" android:checked="false"/>
</android.support.constraint.ConstraintLayout>